fixed hover issue on small screen, moving to contact form

--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 
 @layer base {
-    body{
-        @apply font-[Raleway];
-    }
-    li {
-        @apply px-4;
-        @apply cursor-pointer;
-    }
-  
+  body {
+    @apply font-[Raleway];
+  }
+  li {
+    @apply px-4;
+    @apply cursor-pointer;
+  }
 }
 
 .side-buttons {
-@apply w-[160px] h-[60px] flex justify-between items-center ml-[-100px] hover:ml-[-10px] duration-300;
+  @apply w-[160px] h-[60px] flex justify-between items-center ml-[-100px] hover:ml-[-10px] duration-300;
 }
 
 .button-content {
-@apply flex justify-between items-center w-full text-gray-300;
+  @apply flex justify-between items-center w-full text-gray-300;
 }
 
-.hovereffect {
+@media (min-width: 768px) {
+  .hovereffect {
     width: 100%;
     height: 100%;
     float: left;
@@ -31,7 +31,7 @@
     position: relative;
     text-align: center;
     cursor: default;
-}
+  }
 
   .hovereffect .overlay {
     width: 100%;
@@ -46,7 +46,7 @@
     -webkit-transition: all 0.1s ease-out 0.5s;
     transition: all 0.1s ease-out 0.5s;
   }
-  
+
   .hovereffect:hover .overlay {
     opacity: 1;
     filter: alpha(opacity=100);
@@ -54,12 +54,12 @@
     -webkit-transition-delay: 0s;
     transition-delay: 0s;
   }
-  
+
   .hovereffect img {
     display: block;
     position: relative;
   }
-  
+
   .hovereffect h2 {
     text-transform: uppercase;
     color: #fff;
@@ -76,7 +76,7 @@
     -webkit-transition-delay: 0.3s;
     transition-delay: 0.3s;
   }
-  
+
   .hovereffect:hover h2 {
     -webkit-transform: translateY(0px);
     -ms-transform: translateY(0px);
@@ -84,7 +84,7 @@
     -webkit-transition-delay: 0.3s;
     transition-delay: 0.3s;
   }
-  
+
   .hovereffect a.info {
     display: inline-block;
     text-decoration: none;
@@ -100,11 +100,11 @@
     -webkit-transition: all ease-in-out 0.3s;
     transition: all ease-in-out 0.3s;
   }
-  
+
   .hovereffect a.info:hover {
     box-shadow: 0 0 5px #fff;
   }
-  
+
   .hovereffect:hover a.info {
     -webkit-transform: translateY(0px);
     -ms-transform: translateY(0px);
@@ -115,4 +115,4 @@
     -webkit-transition-delay: 0.3s;
     transition-delay: 0.3s;
   }
-
+}
